# neufin

./: .replit  README.md  agent.py  ai_analyst.py  app.py  app_module.py  auth_manager.py  data_fetcher.py  database.py  financial_snapshot.py  landing.py  main.py  neufin_logo_base64.txt  neufin_new_logo_base64.txt  news_recommender.py  predictive_analytics.py  push_script.sh  pyproject.toml  replit.nix  sentiment_analyzer.py  simple_app.py  subscription_manager.py  upgrade_user.py  utils.py
.streamlit/: config.toml
attached_assets/: Pasted-Enhance-neufin-to-modify-and-improve-with-following-features-1-Market-Sentiment-Analysis-Modify--1744084885332.txt  Pasted-You-are-enhancing-an-existing-fintech-platform-called-Neufin-built-for-investment-enthusiasts-and-p-1744084729954.txt  Pasted-streamlit-errors-StreamlitDuplicateElementId-There-are-multiple-button-elements-with-the-same-auto--1744085792364.txt
backup/: ai_analyst.py  data_fetcher.py  investment_advisor.py  sentiment_analyzer.py
static/: about_info.txt
